feat: Add OWASP Top 10:2025 support and change license to MIT
- Changed license from MIT/Apache-2.0 to MIT only
- Added OWASP Top 10:2025 category mapping system
- Created 5 new OWASP-aligned payload files (40+ new payloads)
  - A01: Broken Access Control (SSRF, Path Traversal, IDOR)
  - A02: Security Misconfiguration (Default creds, debug endpoints)
  - A05: Injection (Advanced SQL/NoSQL/XSS/Command injection bypasses)
  - A07: Authentication Failures (Auth bypass, session, JWT attacks)
  - A10: Error Handling (Stack trace & DB error disclosure)
- Automatic OWASP category tagging for all findings
- Updated documentation with OWASP Top 10:2025 coverage
- Total payloads increased from 240+ to 280+
- Added OWASP integration example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.1"
 edition = "2021"
 rust-version = "1.75"
 authors = ["WAF Scanner Contributors"]
-description = "Advanced WAF bypass scanner with 240+ payloads (XSS, SQLi, RCE, SSTI, XXE, SSRF, NoSQL), 11+ WAF fingerprints, and 7+ evasion techniques"
-license = "MIT OR Apache-2.0"
+description = "OWASP Top 10:2025 aligned WAF bypass scanner with 280+ payloads (XSS, SQLi, RCE, SSTI, XXE, SSRF, NoSQL), 11+ WAF fingerprints, and 7+ evasion techniques"
+license = "MIT"
 repository = "https://github.com/yourusername/simple-waf-scanner"
 homepage = "https://github.com/yourusername/simple-waf-scanner"
 documentation = "https://docs.rs/simple-waf-scanner"
