--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "simple-waf-scanner"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 rust-version = "1.75"
 authors = ["WAF Scanner Contributors"]
-description = "OWASP Top 10:2025 aligned WAF bypass scanner with 280+ payloads (XSS, SQLi, RCE, SSTI, XXE, SSRF, NoSQL), 11+ WAF fingerprints, and 7+ evasion techniques"
+description = "OWASP Top 10:2025 aligned WAF bypass scanner with 300+ payloads (XSS, SQLi, RCE, SSTI, XXE, SSRF, NoSQL, HTTP/2, AD FS), 11+ WAF fingerprints, and 7+ evasion techniques"
 license = "MIT"
 repository = "https://github.com/yourusername/simple-waf-scanner"
 homepage = "https://github.com/yourusername/simple-waf-scanner"
