feat: Add OWASP Top 10 for LLM Applications support (v0.1.5)
- Added 10 LLM vulnerability categories (LLM01-LLM10)
- Created 60+ LLM-specific payloads across 10 payload files
- Implemented 6 LLM evasion techniques (role-reversal, context-splitting, etc.)
- Added 4 LLM-specific matchers (ai_refusal_bypass, system_prompt_leak, etc.)
- Enhanced data extractor with 5 LLM regex patterns
- Added --llm-mode and --semantic-analysis CLI flags
- Created comprehensive LLM testing documentation
- Added llm_scan_example.rs example
- Total payload count: 360+ (300+ web + 60+ LLM)
- Total evasion techniques: 13 (7 web + 6 LLM)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "simple-waf-scanner"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 rust-version = "1.75"
 authors = ["WAF Scanner Contributors"]
-description = "Production-ready OWASP Top 10:2025 aligned WAF bypass scanner with HTTP/2 support (CVE-2023-44487, CVE-2024-27983), 300+ payloads (XSS, SQLi, RCE, SSTI, XXE, SSRF, NoSQL, HTTP/2, AD FS), 11+ WAF fingerprints, and 7+ evasion techniques"
+description = "Production-ready WAF scanner with OWASP Top 10:2025 Web & LLM support. 360+ payloads including LLM/GenAI testing (prompt injection, jailbreaks, system prompt leakage). HTTP/2, 11+ WAF fingerprints, 13 evasion techniques."
 license = "MIT"
-repository = "https://github.com/yourusername/simple-waf-scanner"
-homepage = "https://github.com/yourusername/simple-waf-scanner"
+repository = "https://github.com/htunn/simple-waf-scanner"
+homepage = "https://github.com/htunn/simple-waf-scanner"
 documentation = "https://docs.rs/simple-waf-scanner"
 keywords = ["security", "waf", "pentesting", "scanner", "http"]
 categories = ["command-line-utilities", "development-tools::testing"]
